Fix: Sanitized input for Mongo and Neo4j Databases.